; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/btrfs/extr_extent-tree.c_btrfs_lookup_extent.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/btrfs/extr_extent-tree.c_btrfs_lookup_extent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.btrfs_root = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.btrfs_key = type { i8*, i8* }
%struct.btrfs_path = type { i32 }

@ENOMEM = common dso_local global i32 0, align 4
@BTRFS_EXTENT_ITEM_KEY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @btrfs_lookup_extent(%struct.btrfs_root* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.btrfs_root*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.btrfs_key, align 8
  %10 = alloca %struct.btrfs_path*, align 8
  store %struct.btrfs_root* %0, %struct.btrfs_root** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %11 = call %struct.btrfs_path* (...) @btrfs_alloc_path()
  store %struct.btrfs_path* %11, %struct.btrfs_path** %10, align 8
  %12 = load %struct.btrfs_path*, %struct.btrfs_path** %10, align 8
  %13 = icmp ne %struct.btrfs_path* %12, null
  br i1 %13, label %17, label %14

14:                                               ; preds = %3
  %15 = load i32, i32* @ENOMEM, align 4
  %16 = sub nsw i32 0, %15
  store i32 %16, i32* %4, align 4
  br label %34

17:                                               ; preds = %3
  %18 = load i8*, i8** %6, align 8
  %19 = getelementptr inbounds %struct.btrfs_key, %struct.btrfs_key* %9, i32 0, i32 1
  store i8* %18, i8** %19, align 8
  %20 = load i8*, i8** %7, align 8
  %21 = getelementptr inbounds %struct.btrfs_key, %struct.btrfs_key* %9, i32 0, i32 0
  store i8* %20, i8** %21, align 8
  %22 = load i32, i32* @BTRFS_EXTENT_ITEM_KEY, align 4
  %23 = call i32 @btrfs_set_key_type(%struct.btrfs_key* %9, i32 %22)
  %24 = load %struct.btrfs_root*, %struct.btrfs_root** %5, align 8
  %25 = getelementptr inbounds %struct.btrfs_root, %struct.btrfs_root* %24, i32 0, i32 0
  %26 = load %struct.TYPE_2__*, %struct.TYPE_2__** %25, align 8
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load %struct.btrfs_path*, %struct.btrfs_path** %10, align 8
  %30 = call i32 @btrfs_search_slot(i32* null, i32 %28, %struct.btrfs_key* %9, %struct.btrfs_path* %29, i32 0, i32 0)
  store i32 %30, i32* %8, align 4
  %31 = load %struct.btrfs_path*, %struct.btrfs_path** %10, align 8
  %32 = call i32 @btrfs_free_path(%struct.btrfs_path* %31)
  %33 = load i32, i32* %8, align 4
  store i32 %33, i32* %4, align 4
  br label %34

34:                                               ; preds = %17, %14
  %35 = load i32, i32* %4, align 4
  ret i32 %35
}

declare dso_local %struct.btrfs_path* @btrfs_alloc_path(...) #1

declare dso_local i32 @btrfs_set_key_type(%struct.btrfs_key*, i32) #1

declare dso_local i32 @btrfs_search_slot(i32*, i32, %struct.btrfs_key*, %struct.btrfs_path*, i32, i32) #1

declare dso_local i32 @btrfs_free_path(%struct.btrfs_path*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
